fix: overflow small devices userinfo page

--- a/static/css/userinfo.css
+++ b/static/css/userinfo.css
@@ -12,7 +12,7 @@ Date: November 2021
 .userinfo-descr {
     float: left;
     box-sizing: border-box;
-    width: 150px;
+    width: 120px;
     padding: 5px 0;
 }
 
@@ -20,6 +20,9 @@ Date: November 2021
 .userinfo-value {
     float: left;
     box-sizing: border-box;
-    width: calc(100% - 150px);
+    width: calc(100% - 120px);
     padding: 5px 0;
+    text-overflow: ellipsis;
+    white-space: normal;
+    overflow: hidden;
 }
